[gd_scene load_steps=7 format=3 uid="uid://blh38w2ch00dh"]

[ext_resource type="Script" path="res://Player.gd" id="1_sbnkj"]
[ext_resource type="PackedScene" uid="uid://bywhbfspwed6w" path="res://bullet.tscn" id="2_hya7a"]
[ext_resource type="Texture2D" uid="uid://oiyupjons30" path="res://Circle.png" id="2_ysn42"]
[ext_resource type="Texture2D" uid="uid://djhmjywqx8maj" path="res://cannon.png" id="3_kq7ri"]

[sub_resource type="Gradient" id="Gradient_iyhfj"]
offsets = PackedFloat32Array(0.012987, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u2wdo"]
gradient = SubResource("Gradient_iyhfj")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.211009, 0.87156)
metadata/_snap_count = 2

[node name="Player" type="CharacterBody2D"]
position = Vector2(544, 272)
script = ExtResource("1_sbnkj")
Bullet = ExtResource("2_hya7a")
metadata/_edit_horizontal_guides_ = [0.0]
metadata/_edit_vertical_guides_ = [62.0, -38.0]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ysn42")

[node name="Cannon" type="Sprite2D" parent="."]
position = Vector2(2, 16)
rotation = -1.5708
texture = ExtResource("3_kq7ri")
centered = false
offset = Vector2(-16, 0)

[node name="FireFrom" type="Marker2D" parent="Cannon"]
position = Vector2(16, 53.1051)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(8, -19, 13, -16, 15, -13, 54, -13, 54, 13, 15, 13, 13, 16, 8, 19, 3, 20, -3, 20, -8, 19, -18, 11, -20, 5, -20, -5, -19, -8, -18, -10, -15, -15, -8, -19, -5, -20, 5, -20)

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(8, -19, 13, -16, 15, -13, 54, -13, 54, 13, 15, 13, 13, 16, 8, 19, 3, 20, -3, 20, -8, 19, -18, 11, -20, 5, -20, -5, -19, -8, -18, -10, -15, -15, -8, -19, -5, -20, 5, -20)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(9.53674e-07, -1.71661e-05)
scale = Vector2(3.0625, 3.0625)
texture = SubResource("GradientTexture2D_u2wdo")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
